--- a/server/views/index.html
+++ b/server/views/index.html
@@ -1,26 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pawnifier</title>
-    <link rel="stylesheet" href="static/output.css">
-  </head>
-  <body>
-<div class="w-screen h-screen p-4"> 
-                        <div class="grid grid-cols-3 gap-4">
-                                {{ range .Mails }}
 
-                                <div class="card bg-base-100 shadow-xl">
-                                        <div class="card-body">
-                                        <h3 class="card-title">
-                                        {{ . }}
-                                        </h3>
-                                        <p> Lorem ipsum dolor sit amet .... </p>
-                                </div>
-                                </div>
-                                {{ end }}
-                        </div>
-                </div>
-        </body>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Pawnifier</title>
+  <link rel="stylesheet" href="static/output.css">
+  <script src="https://unpkg.com/htmx.org@1.9.12"
+    integrity="sha384-ujb1lZYygJmzgSwoxRggbCHcjc0rB2XoQrxeTUQyRjrOnlCoYta87iKBWq3EsdM2"
+    crossorigin="anonymous"></script>
+</head>
+
+<body>
+  <div class="w-screen h-screen p-4">
+    <div class="grid grid-cols-3 gap-4">
+      {{ range .Mails }}
+
+      <div class="card bg-base-100 shadow-xl">
+        <div class="card-body">
+          <h3 class="card-title">
+            {{ . }}
+          </h3>
+        </div>
+      </div>
+      {{ end }}
+    </div>
+  </div>
+</body>
+
 </html>
